--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^14.6.0",
+    "images-scraper": "^6.4.1",
     "ms": "^2.1.3"
   },
   "name": "cutiehack2022",
